--- a/总体设计.md
+++ b/总体设计.md
@@ -7,6 +7,8 @@
 # 验证规则
 ## 本地单个field验证
 - field验证定义在html field上完成。
+
+
 ### require
 ### trim-require
 ### format-number
@@ -20,13 +22,15 @@
 ### format-datetime
 ### (!)eq
 ### (!)enum
-## (!)lt
-## (!)gt
-## (!)between
-## (!)asc
+### (!)lt
+### (!)gt
+### (!)between
+### (!)asc
 
 ## 本地多个field间验证
 - mfield验证表示对多个field的验证，验证语法在form上完成
+
+
 ### (!)m_eq
     操作对象数量：2
 ### (!)m_lt
